deps/v8/test/message/fail/modules-cycle5.out
*%(basename)s:6: SyntaxError: Detected cycle while resolving name 'foo' in 'modules-cycle5.mjs'
export {foo} from "modules-cycle5.mjs";
        ^^^
SyntaxError: Detected cycle while resolving name 'foo' in 'modules-cycle5.mjs'

